--- a/0_frontmatter/abstract.tex
+++ b/0_frontmatter/abstract.tex
@@ -3,42 +3,39 @@
 
 
 %\begin{abstractslong}    %uncommenting this line, gives a different abstract heading
+\begin{resumen}        %this creates the heading for the abstract page
+\selectlanguage{spanish}
+% Pon tu resumen aquí.
 
+%Este método surge de la oportunidad que se presenta de aprovechar la cantidad de información generada por los estudiantes en los entornos virtuales.
+
+El desarrollo de las competencias genéricas es a día de hoy clave en la preparación de estudiantes para su futuro papel en la sociedad. Ante esta situación, los centros de enseñanza han de complementar la docencia del conocimiento específico con el entrenamiento y la evaluación del ejercicio de competencias genéricas. Esto ocurre en un contexto en el que las tecnologías de la información y la comunicación están consolidadas en todos los niveles educativos. Los docentes tienen a su disposición una miríada de entornos virtuales de aprendizaje con los que gestionar y supervisar el proceso de enseñanza de sus estudiantes.
+
+En el análisis de la literatura se han identificado trabajos que utilizan las nuevas tecnologías como apoyo en la evaluación de competencias genéricas. Sin embargo, los métodos mayormente utilizados hasta ahora para la evaluación de dichas competencias presentan los siguientes inconvenientes: problemas de escalabilidad para realizar las evaluaciones con grupos grandes de estudiantes, notables diferencias entre las calificaciones dadas por los estudiantes en procesos de autoevaluación o evaluación entre iguales con respecto a las calificaciones que asignaría el docente, el propósito demasiado específico de algunas herramientas, el esfuerzo necesario para poner en práctica ciertas soluciones, y la aplicabilidad de unos indicadores para medir competencias fuera del contexto en el que se definieron. Por todo esto se detecta la necesidad de desarrollar un método para la evaluación asistida de competencias genéricas.
+
+En esta tesis se propone un método de evaluación denominado \emph{design-based assessment} que propone la utilización de la información de los registros de actividad de los estudiantes en entornos virtuales de aprendizaje para diseñar indicadores con los que medir su desempeño en competencias genéricas. El método se contextualiza en la metodología de investigación \emph{design-based research}, ya que el diseño de indicadores se lleva a cabo dentro de un proceso iterativo en el que se va refinando el diseño (ciclo de contraste de hipótesis). Para poner en práctica el método se han desarrollado dos lenguajes específicos de dominio con los que facilitar el cálculo de indicadores de dos entornos virtuales de aprendizaje diferentes: sistemas de gestión de aprendizaje y mundos virtuales.
+
+Para la evaluación del método y las herramientas se han realizado seis estudios de caso en tres entornos virtuales de aprendizaje diferentes: wikis, sistemas de gestión de aprendizaje y mundos virtuales. Además, las propuestas realizadas en esta tesis han sido evaluadas por docentes de todos los niveles educativos y pertenecientes a todas las ramas de conocimiento. Los resultados proporcionan, en primer lugar, evidencias a favor de que el método definido permite a los docentes obtener de manera automática valores para un conjunto de indicadores que el diseñador de la evaluación puede expresar a partir de los registros de actividad de los entornos virtuales de aprendizaje. En segundo lugar, también proporcionan evidencias a favor de que las herramientas desarrolladas les permitan tanto diseñar como contrastar estrategias de evaluación a partir de los registros de estos entornos.
+
+
+\end{resumen}
 
 \begin{abstracts}        %this creates the heading for the abstract page
 \selectlanguage{british}
 % Put your abstract or summary here.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultrices egestas nunc, venenatis rhoncus elit fermentum non. Pellentesque gravida nulla vitae ipsum lobortis ullamcorper. Ut adipiscing, tellus in egestas mattis, enim metus pretium erat, ac tempor dolor neque placerat nulla. Nullam nec ligula eu ipsum pharetra semper a in magna. Integer ut tortor quis nisi fringilla euismod eu ac ipsum. Pellentesque sodales consectetur erat eget rutrum. Proin ornare dolor ut arcu aliquet vestibulum. Pellentesque laoreet tincidunt sem eget semper.
+The development of generic skills is a key issue for preparing students for their future role in society. Due to this circumstance, educational institutions need to complement the learning of specific knowledge of their subjects with training and evaluation of generic skills performance. This occurs in a context in which information and communications technology are consolidated at all educational levels. Teachers have access to a myriad of virtual learning environments that promote and evaluate the teaching of their students.
 
-Integer interdum mattis magna ullamcorper tristique. Nullam commodo nulla eget ipsum vulputate tincidunt auctor leo aliquet. Fusce euismod sagittis ante, eu vulputate eros dictum at. Cras non euismod nunc. Nullam velit diam, consectetur sed eleifend vitae, blandit at arcu. Maecenas ut urna nec turpis lobortis commodo. Aliquam aliquet turpis id massa viverra id sollicitudin est cursus. Sed a tortor non mauris cursus imperdiet.
+In the literature analysis, works have been identified that use new technologies to support the assessment of generic skills. However, the most commonly used methods present the following disadvantages: scalability issues for evaluations when large groups of students are involved, notable differences between the grades given by students in the process of self and peer evaluation when compared to those given by teachers, the high specificity of some tools, the great effort required to implement certain solutions and the applicability of indicators for measuring skills outside the context in which they were created. It is due to these reasons that the development of a method for an assisted evaluation of generic skills is needed.
 
-Integer fermentum rutrum urna at vestibulum. Vivamus ullamcorper erat in sapien dignissim pellentesque. Integer convallis fringilla dictum. In bibendum lectus eu nulla pretium volutpat. Morbi hendrerit fringilla tortor, sed gravida neque lacinia a. In risus magna, hendrerit vitae cursus ac, vehicula at eros. Aenean quis ipsum sit amet leo vestibulum cursus.
+This dissertation introduces an assessment method called \emph{design based assessment}, which proposes the use of the information registered in the virtual learning environments activity registers to design indicators that measure students’ performance in generic skills. The method is contextualized on the research methodology called  \emph{design-based research}, as the design of indicators is carried out in an iterative process in which the design is refined (hypothesis contrast cycle). Two domain-specific languages have been developed to implement this method in two different virtual learning environments: virtual courses and virtual worlds.
 
-Cras placerat mattis dui quis vehicula. Nulla sit amet metus nibh, at auctor enim. Quisque congue ultricies sapien in suscipit. Fusce vitae placerat ante. Praesent aliquet urna ac elit consequat nec mattis augue faucibus. Nunc et sapien vel felis mollis sodales. Aenean molestie nulla vestibulum nisi fringilla vel euismod dolor tristique. Aenean fermentum, dolor eget tincidunt faucibus, risus lorem feugiat elit, sagittis malesuada eros ligula in odio. Pellentesque ac libero lobortis justo bibendum laoreet. Cras egestas lorem eget ligula dignissim sollicitudin. Vestibulum sit amet augue ultrices erat faucibus vestibulum. Aenean tincidunt faucibus leo, nec auctor diam bibendum a. Sed varius, mauris in pellentesque scelerisque, nisl ligula viverra erat, in eleifend tellus enim ac magna. Pellentesque quis est risus. Cras mollis feugiat auctor. Proin ac eros vitae nulla gravida varius.
-
-Morbi at augue sapien. Duis tempus quam vitae velit interdum ultricies. Vivamus laoreet lacinia elit sit amet vehicula. Ut congue diam ac magna hendrerit sed fermentum justo lacinia. Curabitur vel odio neque, quis consequat mi. Proin lobortis justo quis enim fermentum accumsan sagittis ipsum imperdiet. Proin sem felis, laoreet placerat egestas id, fringilla id mauris. Pellentesque a nisi sit amet leo consectetur gravida nec et dui. Curabitur quis hendrerit augue. Etiam sed dui nec tortor convallis fringilla. Proin tempor mattis diam nec egestas. Quisque condimentum elementum lacus ac porta. Vivamus congue, odio eu ullamcorper elementum, leo turpis tempus sem, at condimentum dolor quam eu nunc. Pellentesque eget risus ac velit aliquam sollicitudin sed et ipsum. 
+Six case studies were conducted for the assessment of the method and tools in three different virtual learning environments: wikis, learning management systems and virtual worlds. In order to contrast the proposals stated in this thesis, they have been assessed by teachers belonging to both all educational levels and all branches of knowledge. From the results, it can be derived that the method allows teachers to automatically obtain a set of indicators of students’ activity in virtual learning environments. Additionally, the developed tools allow them to design and contrast evaluation strategies from the registers of these environments. 
 
 
 \end{abstracts}
 
-\begin{resumen}        %this creates the heading for the abstract page
-\selectlanguage{spanish}
-% Pon tu resumen aquí.
 
-La evaluación de competencias genéricas es una labor que tienen que realizar los docentes de todos los niveles educativos en sus asignaturas.
-
-En este trabajo se ha desarrollado un método de evaluación de competencias genéricas basado en el diseño (DBA). Este método se basa en el diseño de evaluaciones mediante la utilización de indicadores de la actividad desempeñada por los estudiantes en los entornos de aprendizaje virtual. Este método surge de la oportunidad que se presenta de aprovechar la cantidad de información generada por los estudiantes en los entornos virtuales.
-
-Para poner en práctica el método DBA se han desarrollado dos DSL que lo implementan. En primer lugar se desarrolló SASQL, un DSL para obtener indicadores de la actividad de los estudiantes del VLE y EvalCourse, el software que interpreta las consultas escritas en SASQL. En segundo lugar se desarrolló VWQL, DSL que en este caso obtiene indicadores de la activdad de los estudiantes de los mundos virtuales y EvalSim, el software que interpreta las consultas escritas en VWQL.
-
-Se han realizado varios estudios de caso en los que se han planificado actividades en el campus virtual para después recopilar los rastros de interacción generados por los estudiantes y aplicarlos a la evaluación de varias competencias genéricas.
-
-La evaluación de la metodología se ha realizado mediante encuestas ...
- 
-
-
-\end{resumen}
 
 
 %\end{abstractlongs}
