--- a/0_frontmatter/acknowledgement.tex
+++ b/0_frontmatter/acknowledgement.tex
@@ -10,16 +10,29 @@
 %uncommenting this line, gives a different acknowledgements heading
 %\begin{acknowledgementslong} 
 
-Quiero dar las gracias a todos mis compañeros y en especial a ...
+En las siguientes líneas quisiera mostrar mi agradecimiento a todos los que de una u otra manera me habéis ayudado en la culminación de este trabajo:
+
+Gracias María José, por haberte multiplicado por dos en estos últimos meses para que yo pudiera terminar este trabajo y por tu apoyo incondicional.
+
+Gracias mamá, Jose y la chica, por vuestros ánimos y por vuestra ayuda.
+
+Gracias papá, porque aunque hace ya nueve años que no estás, siempre estás presente en todo lo que hago. 
+
+Gracia Juanma y Manolo, por haber puesto a mi disposición tantos conocimientos y años de experiencia. Ha sido una placer trabajar con vosotros y espero que vengan muchos proyectos más.
+
+Gracias familia, amigos y compañeros por haber estado ahí y haberos interesado en más de una y dos ocasiones por cómo llevaba la tesis.
+
+Y por supuesto ya estoy disponible para hacer todas aquellas tareas que dejé pendiente para ``cuando terminara la tesis''. Gracias por vuestra paciencia.
 
 
 \begin{flushright}
-\textit{Gracias,}
+%\textit{Gracias,}
 
 Antonio
 
+Junio, 2016
 % Moth and year
-\monthname \ \the\year
+%\monthname \ \the\year
 
 
 
