--- a/0_frontmatter/dedication.tex
+++ b/0_frontmatter/dedication.tex
@@ -2,9 +2,9 @@
 
 \begin{dedication} %this creates the heading for the dedication page
 
-\textit{Dedicatoria.}
+\textit{A María José y Martina.}
 
-Dedico este trabajo a ...
+Por haberme acompañado en este largo viaje.
 
 \end{dedication}
 
