--- a/0_frontmatter/glossary.tex
+++ b/0_frontmatter/glossary.tex
@@ -17,10 +17,10 @@
 
 
 \nomenclature{AMW}{AssessMediaWiki}
-\nomenclature{DBA}{Design-Based Assessment}
-\nomenclature{DSL}{Domain-Specific Language}
+\nomenclature{DBA}{Evaluación basada en el diseño (Design-Based Assessment)}
+\nomenclature{DSL}{Lenguaje específico de dominio (Domain-Specific Language)}
 \nomenclature{SASQL}{Simple Assessment Specific Query Language}
-\nomenclature{SNA}{Social Network Analysis}
+\nomenclature{SNA}{Análisis de redes sociales (Social Network Analysis)}
 \nomenclature{VWQL}{Virtual World Query Languaje}
 
 
