--- a/0_frontmatter/title_back.tex
+++ b/0_frontmatter/title_back.tex
@@ -15,7 +15,7 @@ Evaluación de competencias genéricas basada en indicadores procedentes de regi
 }
 
 
-
+\bigskip
 
 Autor: Antonio Balderas Alberico
 
@@ -29,19 +29,17 @@ Director: Manuel Palomo Duarte
 
 \vfill
 
-\noindent
-The following web-page address contains up to date information about this dissertation and related topics: \\
-\url{http://paginaspersonales.deusto.es/Name/}
+%\noindent
+%The following web-page address contains up to date information about this dissertation and related topics: \\
+%\url{http://paginaspersonales.deusto.es/Name/}
 
 
 \noindent
-Impreso en Jerez de la Frontera
+%Impreso en Puerto Real
 
 % TODO final date
 \noindent
-Primera edición, 
-% Moth and year
-\monthname \ \the\year
+Julio 2016
 
 \vspace{1cm}
 \hrule
