--- a/2_state_of_the_art/EsquemaClasificacion.tex
+++ b/2_state_of_the_art/EsquemaClasificacion.tex
@@ -34,11 +34,11 @@ Uno de los problemas de la no automatización de los procesos de evaluación es 
 
 \subsubsection{Cuestionarios (Questionnaries)}
 
-Algunos de los cuestionarios que se han encontrado dentro de la bibliografía son tests de personalidad. Este tipo de cuestionario está diseñado para revelar aspectos del carácter o mecanismos psicológicos de un individuo. La evaluación de la personalidad se puede ver como la aplicación de procedimientos para medir aspectos de la personalidad de manera que sean aplicables a otros dominios~\cite{wiggins2003paradigms}. Uno de esos dominios es el laboral, sobre todo las entrevistas de trabajo. Es común la necesidad del empresario por conocer la aptitud o no del candidato a un puesto para asumir cierto rol dentro de una empresa. En \cite{andre2011formal} se propone un modelo formal para asignar trabajadores a proyectos software. Para definir el modelo se siguió un método Delphi, donde los expertos definieron criterios para la evaluación de habilidades de trabajo en equipo y definieron un test psicológico. Este modelo se plasmó en un software, que a partir de las respuestas del usuario, le asignaba un rol u otro dentro de los equipos. En \cite{lumsden2005assessment} se muestra la herramienta PQA (Personal Quality Assessment). Esta herramienta de evaluación contiene diversos test para la evaluación de la competencia genérica del \emph{razonamiento} y del {comportamiento ético} en el ámbito médico. En \cite{park2006moral} se muestra VIA-Youth (Values in Action Invetory for Youth) un cuestionario para evaluar la competencia \emph{moral} de los estudiantes a partir de preguntas relacionadas con 24 características de la personalidad. 
+Algunos de los cuestionarios que se han encontrado dentro de la bibliografía son tests de personalidad. Este tipo de cuestionario está diseñado para revelar aspectos del carácter o mecanismos psicológicos de un individuo. La evaluación de la personalidad se puede ver como la aplicación de procedimientos para medir aspectos de la personalidad de manera que sean aplicables a otros dominios~\cite{wiggins2003paradigms}. Uno de esos dominios es el laboral, sobre todo las entrevistas de trabajo. Es común la necesidad del empresario por conocer la aptitud o no del candidato a un puesto para asumir cierto rol dentro de una empresa. En \cite{andre2011formal} se propone un modelo formal para asignar trabajadores a proyectos software. Para definir el modelo se siguió un método Delphi, donde los expertos definieron criterios para la evaluación de habilidades de trabajo en equipo y definieron un test psicológico. Este modelo se plasmó en un software, que a partir de las respuestas del usuario, le asignaba un rol u otro dentro de los equipos. En \cite{lumsden2005assessment} se muestra la herramienta PQA (Personal Quality Assessment). Esta herramienta de evaluación contiene diversos test para la evaluación de la competencia genérica del \emph{razonamiento} y del {comportamiento ético} en el ámbito médico. En \cite{park2006moral} se muestra VIA-Youth (Values in Action Inventory for Youth) un cuestionario para evaluar la competencia \emph{moral} de los estudiantes a partir de preguntas relacionadas con 24 características de la personalidad. 
 
 Las habilidades relacionadas con el trabajo en equipo también son de las que más se miden a traves de cuestionarios. Según~\cite{martinez2014teamwork}, para obtener un buen desempeño en las competencias de trabajo en equipo hay que entrenarlas. Para contrastar su hipótesis, llevan a cabo un experimento donde se evalúa la competencia de \emph{trabajo en equipo} mediante el TWBQ (Team Work Behaviour Questionnaire). TWBQ es un cuestionario que evalúa actividades individuales que contribuyen al devenir del equipo: por un lado, \emph{interacción con los compañeros}: conflictos y solución de problemas, colaboración, comunicación; y por otro lado \emph{gestión del equipo}: liderazgo, establecimiento de objetivos, planificación de taras, coordinación con los miembros del equipo). En \cite{barbera2011design} se lleva a cabo una experiencia en la que se aplicó una metodología ABP en la asignatura de Gestión de Empresas. Trabajaron las competencias de \emph{trabajo en equipo}, \emph{desarrollo de proyecto} y \emph{comunicación oral}. Para asegurar la objetividad de la evaluación se utilizaron rúbricas y cuestionarios. El profesorado que participó en la experiencia la consideró muy positiva, pero reconocieron que tuvieron que dedicar un elevado número de horas, tanto para las clases como para la evaluación de muchos proyectos.
 
-En \cite{badcock2010developing} se evalúan cuatro competencias genéricas: \emph{pensamiento crítico}, \emph{habilidades interpersonales}, \emph{solución de problemas} y \emph{comunicación escrita}. Para ello se utiliza el test GSA (Graduate Skills Assessment). El GSA fue desarrollado por el ACER (Australian Council for Educational Research)~\footnote{http://www.acer.edu.au/gsa}  bajo su Programa de Innovación para la Educación Superior. El objetivo con el que se diseñó es el de evaluar estas competencias genéricas cuando los estudiantes acceden a la universidad. Esto ayuda al profesorado a tener una medida objetiva para dichas competencias. Otro trabajo se muestra en~\cite{fernandez2011experience}, dónde se realiza un experimento en el que se presenta un test para evaluar la competencia de \emph{comunicación en un segundo idioma}, en este caso en inglés. En \cite{aziz2007appraisal,rashid2008engineering,a2007outcome} se utilizan modelos matemáticos (\emph{Rasch model} y \emph{ESPEGS model}) para la evaluación de los objetivos de aprendizaje del curso y de competencias genéricas. La entrada de estos modelos matemáticos son la evaluación de los estudiantes realizadas por los docentes para cada actividad. 
+En \cite{badcock2010developing} se evalúan cuatro competencias genéricas: \emph{pensamiento crítico}, \emph{habilidades interpersonales}, \emph{solución de problemas} y \emph{comunicación escrita}. Para ello se utiliza el test GSA (Graduate Skills Assessment). El GSA fue desarrollado por el ACER (Australian Council for Educational Research)~\footnote{\url{http://www.acer.edu.au/gsa}}  bajo su Programa de Innovación para la Educación Superior. El objetivo con el que se diseñó es el de evaluar estas competencias genéricas cuando los estudiantes acceden a la universidad. Esto ayuda al profesorado a tener una medida objetiva para dichas competencias. Otro trabajo se muestra en~\cite{fernandez2011experience}, dónde se realiza un experimento en el que se presenta un test para evaluar la competencia de \emph{comunicación en un segundo idioma}, en este caso en inglés. En \cite{aziz2007appraisal,rashid2008engineering,a2007outcome} se utilizan modelos matemáticos (\emph{Rasch model} y \emph{ESPEGS model}) para la evaluación de los objetivos de aprendizaje del curso y de competencias genéricas. La entrada de estos modelos matemáticos son la evaluación de los estudiantes realizadas por los docentes para cada actividad. 
 
 Los cuestionarios pueden constar de preguntas abiertas o cerradas. Las preguntas abiertas obligan al evaluado a formular la respuesta a la pregunta y al evaluador a leerla para corregirla, lo que conlleva una mayor carga de trabajo. En \cite{albergaria2011critical} se presenta un cuestionario para evaluar el \emph{pensamiento crítico}, la \emph{curiosidad} y la \emph{creatividad}. El cuestionario consta sobre todo de preguntas abiertas, lo que implica tener que dedicar más tiempo y recursos para realizar las evaluaciones. En~\cite{vizcarro2013assessment}, profesores de los grados de Computación y Matemáticas y de Ingeniería Informática elaboraron una prueba escrita para la evaluación de la competencia genérica de \emph{resolución de problemas}. Este constaba de preguntas abiertas y cerradas, siendo minuciosamente seleccionadas por el profesorado que formaba parte en la experiencia, así como las respuestas que se esperarían de los estudiantes. El proyecto fue muy satisfactorio, aunque en las conclusiones vemos que los autores indican que encontrar un equilibrio entre el esfuerzo necesario para desarrollar este tipo de dispositivos de evaluación y la posibilidad de no hacerlo, o hacerlo pero no tan exhaustivamente, es algo que la comunidad académica debe abordar seriamente.
 
