--- a/9_backmatter/declaration.tex
+++ b/9_backmatter/declaration.tex
@@ -16,21 +16,21 @@
 
 % Depending on the regulations of your faculty you may need a declaration like the one below. This specific one is from the medical faculty of the university of Dresden.
 
-\begin{declaration}        %this creates the heading for the declaration page
+%\begin{declaration}        %this creates the heading for the declaration page
 
-I herewith declare that I have produced this work without the prohibited assistance of third parties and without making use of aids other than those specified; notions taken over directly or indirectly from other sources have been identified as such. This work has not previously been presented in identical or similar form to any examination board.
+%Por la presente declaro que he realizado este trabajo sin la ayuda prohibido de terceros y sin hacer uso de las ayudas distintas de las especificadas; nociones tomadas en forma directa o indirecta de otras fuentes se han identificado como tal. Este trabajo no ha sido previamente presentado de manera idéntica o similar a cualquier mesa examinadora.
 
-The dissertation work was conducted from 20XX to \the\year \ under the supervision of
-Name Surname
-and 
-Name Surname
-at 
-the University Cádiz.
+%The dissertation work was conducted from 20XX to \the\year \ under the supervision of
+%Name Surname
+%and 
+%Name Surname
+%at 
+%the University Cádiz.
 
-\vspace{10mm}
+%\vspace{10mm}
 
 % City
-Puerto Real,
+%Puerto Real,
 
 % Signature figure
 
@@ -41,7 +41,7 @@ Puerto Real,
 %\end{flushright}
 
 
-\end{declaration}
+%\end{declaration}
 
 
 
@@ -55,12 +55,9 @@ Puerto Real,
 
 \begin{center}
 \noindent
-This dissertation was finished writing 
-in 
-Jerez de la Frontera
-on
+Este tesis doctoral fue finalizada en Jerez de la Frontera el 17 de junio de 2016
 % Date
-\today 
+%\today 
 \end{center}
 
 \vfill
@@ -80,7 +77,7 @@ on
 \medskip
 
 \begin{center}
-\textit{This page is intentionally left blank}
+\textit{Esta página se ha dejado en blanco intencionadamente.}
 \end{center}
 
 \vfill
