--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -12,7 +12,8 @@
   title={Making the most of our potential: Consolidating the European Higher Education Area},
   author={Communiqu{\'e}, Bucharest},
   booktitle={2012 Ministerial Conference and 3rd Bologna Policy Forum Documents},
-  year={2012}
+  year={2012},
+  address ={Bucharest}
 }
 
 @book{gonzalez2003tuning,
@@ -23,7 +24,7 @@
 }
 
 @article{gonzalez2005tuning,
-  title={Tuning Educational Structures in Europe II. Universitites’ contribution to the Bologna Process},
+  title={{Tuning Educational Structures in Europe II. Universitites’ contribution to the Bologna Process}},
   author={Gonz{\'a}lez, J and Wagenaar, R},
   journal={University of Deusto},
   year={2005}
@@ -50,7 +51,7 @@
 }
 
 @article {Redecker:2013,
-author = {Redecker, Christine and Johannessen, Øystein},
+author = {Redecker, Christine and Johannessen, Oystein },
 title = {{Changing Assessment — Towards a New Assessment Paradigm Using ICT}},
 journal = {European Journal of Education},
 volume = {48},
@@ -76,7 +77,7 @@ year = {2013},
 
 @inproceedings{Zafra:2011, 
 author={Zafra, A. and Gibaja, E. and Luque, M. and Ventura, S.}, 
-booktitle={Next Generation Web Services Practices (NWeSP), 2011 7th International Conference on}, 
+booktitle={7th International Conference on Next Generation Web Services Practices (NWeSP), 2011}, 
 title={An evaluation of the effectiveness of e-learning system as support for traditional classes}, 
 year={2011}, 
 pages={431-435}
@@ -149,7 +150,7 @@ year = {2012}
 
 @inproceedings{Johnson:2013, 
 author={Johnson, D.H.}, 
-booktitle={Digital Signal Processing and Signal Processing Education Meeting (DSP/SPE), 2013 IEEE}, 
+booktitle={IEEE Digital Signal Processing and Signal Processing Education Meeting (DSP/SPE), 2013}, 
 title={Teaching a ``mooc:`` Experiences from the front line}, 
 year={2013}, 
 pages={268-272}
@@ -245,7 +246,8 @@ year = {2012}
   volume={17},
   number={1},
   year={2008},
-  organization={British Computer Society}
+  organization={British Computer Society},
+  pages={1--10}
 }
 
 @article{malehorn1994ten,
@@ -280,7 +282,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{starcic2008sustaining,
   title={Sustaining Teacher's Professional Development and Training through Web-Based Communities of Practice},
   author={Starcic, Andreja Istenic},
-  booktitle={Applications and the Internet, 2008. SAINT 2008. International Symposium on},
+  booktitle={International Symposium on Applications and the Internet, 2008. SAINT 2008.},
   pages={317--320},
   year={2008},
   organization={IEEE}
@@ -307,7 +309,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{masip2013self,
   title={Self-video recording for the integration and assessment of generic competencies},
   author={Masip-{\'A}lvarez, Albert and Hervada-Sala, Carme and P{\`a}mies-G{\'o}mez, Teresa and Arias-Pujol, Antoni and Jaen-Fernandez, Carles and Rodriguez-Sorigue, Cristina and Romero-Duran, David and Nejjari-Akhi-Elarab, Fatiha and Alvarez-del-Castillo, M and Roca-Lefler, Marta and others},
-  booktitle={Global Engineering Education Conference (EDUCON), 2013 IEEE},
+  booktitle={IEEE Global Engineering Education Conference (EDUCON), 2013},
   pages={436--441},
   year={2013},
   organization={IEEE}
@@ -434,9 +436,9 @@ author = "Leslie Borjas De Xena"
 }
 
 @inproceedings{piedra2010measuring,
-  title={Measuring collaboration and creativity skills through rubrics: Experience from UTPL collaborative social networks course},
+  title={{Measuring collaboration and creativity skills through rubrics: Experience from UTPL collaborative social networks course}},
   author={Piedra, Nelson and Chicaiza, Janneth and L{\'o}pez, Jorge and Romero, Audrey and Tovar, Edmundo},
-  booktitle={Education Engineering (EDUCON), 2010 IEEE},
+  booktitle={IEEE Education Engineering (EDUCON), 2010},
   pages={1511--1516},
   year={2010},
   organization={IEEE}
@@ -447,7 +449,7 @@ author = "Leslie Borjas De Xena"
 @article{yang2014fine,
   title={A fine-grained outcome-based learning path model},
   author={Yang, Fan and Li, Frederick WB and Lau, Rynson WH},
-  journal={Systems, Man, and Cybernetics: Systems, IEEE Transactions on},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics: Systems},
   volume={44},
   number={2},
   pages={235--245},
@@ -525,7 +527,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{bedek2011behavioral,
   title={From behavioral indicators to contextualized competence assessment},
   author={Bedek, Michael and Petersen, Sobah Abbas and Heikura, Tuija},
-  booktitle={Advanced Learning Technologies (ICALT), 2011 11th IEEE International Conference on},
+  booktitle={11th IEEE International Conference on Advanced Learning Technologies (ICALT), 2011},
   pages={277--281},
   year={2011},
   organization={IEEE}
@@ -543,7 +545,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{rodriguez2010portfolio,
   title={e-Portfolio: a tool to assess university students' skills},
   author={Rodriguez-Donaire, Silvia and Garc{\'\i}a, Beatriz Amante and Del Olmo, Sonia Oliver},
-  booktitle={Information Technology Based Higher Education and Training (ITHET), 2010 9th International Conference on},
+  booktitle={9th International Conference on Information Technology Based Higher Education and Training (ITHET), 2010},
   pages={114--124},
   year={2010},
   organization={IEEE}
@@ -552,7 +554,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{lacuesta2009active,
   title={Active learning through problem based learning methodology in engineering education},
   author={Lacuesta, Raquel and Palacios, Guillermo and Fern{\'a}ndez, Luis},
-  booktitle={Frontiers in Education Conference, 2009. FIE'09. 39th IEEE},
+  booktitle={39th IEEE Frontiers in Education Conference, 2009. FIE'09.},
   pages={1--6},
   year={2009},
   organization={IEEE}
@@ -561,7 +563,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{benlloch2007adapting,
   title={Adapting teaching and assessment strategies to enhance competence-based learning in the framework of the European convergence process},
   author={Benlloch-Dualde, Jos{\'e}V and Blanc-Clavero, Sara},
-  booktitle={Frontiers In Education Conference-Global Engineering: Knowledge Without Borders, Opportunities Without Passports, 2007. FIE'07. 37th Annual},
+  booktitle={37th Annual Frontiers In Education Conference-Global Engineering: Knowledge Without Borders, Opportunities Without Passports, 2007. FIE'07.},
   pages={S3B--1},
   year={2007},
   organization={IEEE}
@@ -572,7 +574,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{vizcarro2013assessment,
   title={Assessment of problem solving in computing studies},
   author={Vizcarro Guarch, Carmen and Martin Espinosa, Pilar and Cobos, Ruth and P{\'e}rez, Jorge E and Tovar Caro, Edmundo and Blanco Viejo, Gregoria and Bermudez Marin, Aurelio and Reyes Ruiz Gallardo, Jose},
-  booktitle={Frontiers in Education Conference, 2013 IEEE},
+  booktitle={IEEE Frontiers in Education Conference, 2013},
   pages={999--1003},
   year={2013},
   organization={IEEE}
@@ -641,7 +643,7 @@ author = "Leslie Borjas De Xena"
   title={Engineering students performance evaluation of generic skills measurement: {ESPEGS} model},
   author={Rashid, Rozeha A and Abdullah, Razimah and Zaharim, Azami and Ghulman, Hamzah Ahmad and Masodi, Mohd Saidfudin and Mauri, JL and Zaharim, A and Kolyshkin, A and Hatziprokopiou, M and Lazakidou, A and others},
   booktitle={Proceedings of the 5th WSEAS International Conference on Engineering Education (EE'08)},
-  number={5},
+  volume={5},
   pages={377--383},
   year={2008},
   organization={World Scientific and Engineering Academy and Society (WSEAS)}
@@ -690,7 +692,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{martinez2014teamwork,
   title={Teamwork competence and academic motivation in computer science engineering studies},
   author={Martinez, Jorge E Perez and Garc{\'\i}a Mart{\'\i}n, Javier and Alonso, Almudena Sierra},
-  booktitle={Global Engineering Education Conference (EDUCON), 2014 IEEE},
+  booktitle={IEEE Global Engineering Education Conference (EDUCON), 2014},
   pages={778--783},
   year={2014},
   organization={IEEE}
@@ -720,7 +722,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{rayon2014web,
   title={A web platform for the assessment of competences in Mobile Learning Contexts},
   author={Rayon Jerez, Alex and Guenaga, Mariluz and N{\'u}{\~n}ez, Asier},
-  booktitle={Global Engineering Education Conference (EDUCON), 2014 IEEE},
+  booktitle={IEEE Global Engineering Education Conference (EDUCON), 2014},
   pages={321--329},
   year={2014},
   organization={IEEE}
@@ -876,7 +878,7 @@ author = "Leslie Borjas De Xena"
   title={La r{\'u}brica como instrumento pedag{\'o}gico para la tutorizaci{\'o}n y evaluaci{\'o}n de los aprendizajes en el foro online en educaci{\'o}n superior},
   author={Torres-Gordillo, Juan-Jes{\'u}s and Perera-Rodr{\'\i}guez, V{\'\i}ctor-Hugo},
   journal={Pixel-Bit: Revista de medios y educaci{\'o}n},
-  number={36},
+  volume={36},
   pages={141--149},
   year={2010},
   publisher={Secretariado de Recursos Audiovisuales y Nuevas Tecnolog{\'\i}as}
@@ -886,7 +888,7 @@ author = "Leslie Borjas De Xena"
   title={El cuestionario como instrumento de investigaci{\'o}n/evaluaci{\'o}n},
   author={Mu{\~n}oz, Tom{\'a}s Garc{\'\i}a},
   howpublished ={\url{http://cvonline.uaeh.edu.mx/Cursos/Maestria/MTE/Gen02/seminario_de_tesis/Unidad_4_anterior/Lect_El_Cuestionario.pdf}},
-  note = {Accessed: 2016-05-01}
+  note = {Accessed: 2016-05-01},
   year={2003}
 }
 % Fin listado de competencias
@@ -1022,7 +1024,11 @@ author = "Leslie Borjas De Xena"
 @article{chatti2014learning,
   title={Learning Analytics: Challenges and Future Research Directions},
   author={Chatti, Mohamed Amine and Lukarov, Vlatko and Th{\"u}s, Hendrik and Muslim, Arham and Yousef, Ahmed Mohamed Fahmy and Wahid, Usman and Greven, Christoph and Chakrabarti, Arnab and Schroeder, Ulrik},
-  year={2014}
+  journal={E-Learning \& Education},
+  year={2014},
+  volume={10},
+  number={1},
+  howpublished ={\url{https://eleed.campussource.de/archive/10/4035}},
 }
 
 @article{elgort2008wiki,
@@ -1049,7 +1055,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{ortega2011new,
   title={New educational approach based on the use of wiki platforms in university environments},
   author={Ortega Valiente, J and Reinoso Peinado, JA},
-  booktitle={Next Generation Web Services Practices (NWeSP), 2011 7th International Conference on},
+  booktitle={7th International Conference on Next Generation Web Services Practices (NWeSP), 2011},
   pages={280--284},
   year={2011},
   organization={IEEE}
@@ -1099,7 +1105,7 @@ author = "Leslie Borjas De Xena"
 @inproceedings{moreno2014serious,
   title={Serious games: A journey from research to application},
   author={Moreno-Ger, Pablo and Martinez-Ortiz, Ivan and Freire, Manuel and Manero, Borja and Fernandez-Manjon, Baltasar},
-  booktitle={Frontiers in Education Conference (FIE), 2014 IEEE},
+  booktitle={IEEE Frontiers in Education Conference (FIE), 2014},
   pages={1--4},
   year={2014},
   organization={IEEE}
@@ -1206,13 +1212,14 @@ author = "Leslie Borjas De Xena"
 	   number={3}
 }
 
-@incollection{berns2013using,
+@article{berns2013using,
   title={Using a {3D} online game to assess students’ foreign language acquisition and communicative competence},
   author={Berns, Anke and Palomo-Duarte, Manuel and Dodero, Juan Manuel and Valero-Franco, Concepci{\'o}n},
-  booktitle={Scaling up learning for sustained impact},
   pages={19--31},
-  year={2013},
-  publisher={Springer}
+        publisher={Springer Berlin Heidelberg},
+        journal={Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+        volume={8095 LNCS},
+        year={2013}
 }
 
 @article{ladron2008revision,
@@ -1250,10 +1257,9 @@ author = "Leslie Borjas De Xena"
   publisher={SAGE Publications}
 }
 
-@article{laurillard2012teaching,
-  title={Teaching as a design science},
+@book{laurillard2012teaching,
+  title={Teaching as a design science. Building pedagogical patterns for learning and technology},
   author={Laurillard, Diana},
-  journal={Building pedagogical patterns for learning and technology},
   year={2012},
   publisher={Routledge London}
 }
@@ -1298,7 +1304,7 @@ author = "Leslie Borjas De Xena"
   publisher={Elsevier}
 }
 
-@article{midoro2013guidelines,
+@book{midoro2013guidelines,
   title={Guidelines on adaptation of the {UNESCO ICT} Competency Framework for Teachers},
   author={Midoro, Vittorio},
   year={2013},
@@ -1358,35 +1364,35 @@ author = "Leslie Borjas De Xena"
   title={Los beneficios de la Tecnolog{\'i}a en la Educaci{\'o}n},
   author={Andr{\'e}s, Felipe Garc{\'\i}a},
   howpublished ={\url{http://www.labrechadigital.org/labrecha/Articulos/los-beneficios-de-la-tecnologia-en-la-educacion.html}},
-  note = {Accessed: 2016-01-11}
+  note = {Accessed: 2016-01-11},
   year={2015}
 }
 
 @incollection{llp:2006,
 author = {European, Comission},
 booktitle = {{Decision No 1720/2006/EC of the European Parliament and of the Council of 15 November 2006 establishing an action programme in the field of lifelong learning}},
-month = nov,
+month = {nov},
 pages = {327/48 -- 327/49},
-publisher = {Official Journal of the European Union},
+publisher = {{Official Journal of the European Union}},
 title = {{The Lifelong Learning Programme}},
 chapter = {1},
-url={{http://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:32006D1720&from=EN}},
-year = {2006}
+year={2006}
 }
+% url={{http://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:32006D1720&from=EN}},
 
 @inproceedings{izquierdo2012community,
   title={Community-driven language development},
   author={Izquierdo, Javier Luis C{\'a}novas and Cabot, Jordi},
-  booktitle={Modeling in Software Engineering (MISE), 2012 ICSE Workshop on},
+  booktitle={ICSE Workshop on Modeling in Software Engineering (MISE), 2012},
   pages={29--35},
   year={2012},
   organization={IEEE}
 }
 
-@article{cole2005being,
+@inproceedings{cole2005being,
   title={Being proactive: where action research meets design research},
   author={Cole, Robert and Purao, Sandeep and Rossi, Matti and Sein, Maung},
-  journal={ICIS 2005 Proceedings},
+  booktitle={Proceedings - International Conference on Information System (ICIS), 2005},
   pages={27},
   year={2005}
 }
@@ -1434,7 +1440,53 @@ year = {2006}
 @inproceedings{reinoso2015evaluacion,
   title={{Evaluación del trabajo individual y grupal en un wiki}},
   author={Reinoso, Antonio J. and Palomo-Duarte, Manuel and Tocino-Garcia, Jose Tomas and Ortega-Valiente, Juan and Balderas, Antonio},
-  booktitle={ III Congreso Internacional Sobre Aprendizaje, Innovación y Competitividad. CINAIC 2015}
+  booktitle={ III Congreso Internacional Sobre Aprendizaje, Innovación y Competitividad. CINAIC 2015},
+  pages={536--541}
+}
+
+@article{bostock2000student,
+  title={Student peer assessment},
+  author={Bostock, Stephen},
+  journal={Learning Technology},
+  year={2000}
+}
+
+@article{alario2013glue,
+  title={GLUE!: An architecture for the integration of external tools in Virtual Learning Environments},
+  author={Alario-Hoyos, Carlos and Bote-Lorenzo, Miguel L and G{\'o}Mez-S{\'a}Nchez, Eduardo and Asensio-P{\'e}Rez, Juan I and Vega-Gorgojo, Guillermo and Ruiz-Calleja, Adolfo},
+  journal={Computers \& Education},
+  volume={60},
+  number={1},
+  pages={122--137},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{ruiz2015framework,
+  title={A framework for software process deployment and evaluation},
+  author={Ruiz-Rube, Iv{\'a}n and Dodero, Juan Manuel and Colomo-Palacios, Ricardo},
+  journal={Information and Software Technology},
+  volume={59},
+  pages={205--221},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@incollection{keele2007guidelines,
+  title={Guidelines for performing systematic literature reviews in software engineering},
+  author={Kitchenham, Barbara and Charters Stuart},
+  booktitle={Technical report, Ver. 2.3 EBSE Technical Report.},
+  year={2007},
+  publisher={EBSE}
+}
+
+
+
+@book{balta2016coddii,
+  title={Juegos Serios - Informe CODDII - Conferencia de Decanos y Directores de Ingeniería Informática},
+  author={Fern{\'a}ndez-Manj{\'o}n, Baltasar and Moreno-Ger, Pablo and Freire, Manuel and Mart{\'i}nez-Ortiz, Iv{\'a}n},
+  year={2016},
+  publisher={Facultad de Informática, Universidad Complutense de Madrid}
 }
 
 @comment{jabref-meta: selector_publisher:}
